--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>XKCD Slack</title>
-</head>
-<body>
-    <h1>Hello world!</h1>
-    <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,commands,bot&client_id=35162881508.35204184484"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block content %}
+    <h1>There is always a relevant XKCD.</h1>
+    <h2>Now there can be a relevant XKCD in Slack, too.</h2>
+    <a href="https://slack.com/oauth/authorize?scope=commands&client_id=35162881508.35386565014"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+{% endblock %}
