remove hotlinked image

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -14,7 +14,7 @@
                 {% block content %}{% endblock %}
             </div>
 
-            <img src="http://puu.sh/oCi5u/429764b337.png" class="preview" alt="XKCD Slack bot preview">
+            <img src="/img/screenshot.png" class="preview" alt="XKCD Slack bot preview">
         </div>
         <div class="footer">
             <p>Made by <a href="https://cwhite.me">Chris White</a>. <strong>NOT</strong> an official XKCD project.</p>
