Add attribution to Randall Munroe to footer

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -17,7 +17,7 @@
             <img src="/img/screenshot.png" class="preview" alt="XKCD Slack bot preview">
         </div>
         <div class="footer">
-            <p>Made by <a href="https://cwhite.me">Chris White</a>. <strong>NOT</strong> an official XKCD project.</p>
+            <p>Made by <a href="https://cwhite.me">Chris White</a>. <strong>NOT</strong> an official XKCD project. Original web design by Randall Munroe.</p>
         </div>
     </body>
 </html>
