--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -19,5 +19,14 @@
         <div class="footer">
             <p>Made by <a href="https://cwhite.me">Chris White</a>. <strong>NOT</strong> an official XKCD project. Original web design by Randall Munroe.</p>
         </div>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        
+          ga('create', 'UA-62546558-3', 'auto');
+          ga('send', 'pageview');
+        </script>
     </body>
 </html>
