--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -10,14 +10,10 @@
     </head>
     <body>
         <div class="content clearfix">
-            <div class="intro">
-                {% block content %}{% endblock %}
-            </div>
-
-            <img src="/img/screenshot.png" class="preview" alt="XKCD Slack bot preview">
+            {% block content %}{% endblock %}
         </div>
         <div class="footer">
-            <p>Made by <a href="https://cwhite.me">Chris White</a>. <strong>NOT</strong> an official XKCD project. Original web design by Randall Munroe.</p>
+            <p><a href="/privacy">Privacy Policy</a>. <a href="/support">Support</a>. Made by <a href="https://cwhite.me">Chris White</a>. <strong>NOT</strong> an official XKCD project. Original web design by Randall Munroe.</p>
         </div>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
