--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -7,6 +7,8 @@
         <title>{% block title %}{% endblock %}XKCD for Slack</title>
 
         <link href="/css/styles.css" rel="stylesheet" type="text/css">
+
+        <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <div class="content clearfix">
@@ -20,7 +22,7 @@
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        
+
           ga('create', 'UA-62546558-3', 'auto');
           ga('send', 'pageview');
         </script>
