add meta keywords and description

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="XKCDBot brings relevant XKCDs into your Slack teams via an easy to use slash command.">
+        <meta name="keywords" content="xkcd,slack,comics,bot,slash command">
+        <meta name="author" content="Chris White">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>{% block title %}{% endblock %}XKCD for Slack</title>
