--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -11,7 +11,7 @@
 
         <link href="/css/styles.css" rel="stylesheet" type="text/css">
 
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="favicon.png">
     </head>
     <body>
         <div class="content clearfix">
