--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,14 +1,93 @@
+.content, .footer {
+  margin-left: auto
+}
 
-// Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+html {
+  box-sizing: border-box
+}
 
-// Variables
-@import "variables";
+*, ::after, ::before {
+  box-sizing: inherit
+}
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+body {
+  background: #96A8C8;
+  font-family: Lucida, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  font-variant: small-caps
+}
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+.content {
+  max-width: 1200px;
+  margin-right: auto;
+  background: #FFF;
+  border: 1px solid #000;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center
+}
+
+.content::after {
+  clear: both;
+  content: "";
+  display: table
+}
+
+.intro {
+  margin-bottom: 40px
+}
+
+@media (min-width: 768px) {
+  .intro {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%
+  }
+  .intro:last-child {
+    margin-right: 0
+  }
+  .preview {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%
+  }
+  .preview:last-child {
+    margin-right: 0
+  }
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0
+}
+
+* html .clearfix {
+  height: 1%
+}
+
+.clearfix {
+  display: block
+}
+
+img {
+  max-width: 100%
+}
+
+.footer {
+  max-width: 1200px;
+  margin-right: auto;
+  text-align: right
+}
+
+.footer::after {
+  clear: both;
+  content: "";
+  display: table
 }
